--- a/backend/views/resetPassword.ejs
+++ b/backend/views/resetPassword.ejs
@@ -54,7 +54,7 @@
             let password=input.value;
             console.log(password)
             let resettoken="<%= token %>"
-               let res= await axios.post(`http://localhost:8080/user/token/${resettoken}`,{password})
+               let res= await axios.post(`https://socilamedia-1.onrender.com/user/token/${resettoken}`,{password})
 
                const data=res.data;
                if(data.success){
